<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reach</string>
    <string name="title_section1">My Reach</string>
    <string name="title_section2">Hide Songs</string>
    <string name="title_section3">Promo Code</string>
    <string name="title_section4">Upload History</string>
    <string name="title_section5">Invite Friends</string>
    <string name="title_section6">Contact Us</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_my_process">MyProcessActivity</string>
    <string name="title_activity_reach_queue">Reach</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_reach_notification">ReachNotificationActivity</string>
    <string-array name="sports_array">
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>FootBall</item>
        <item>Basket Ball</item>
        <item>Table Tennis</item>
        <item>Chess</item>
        <item>Hockey</item>
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>FootBall</item>
        <item>Basket Ball</item>
        <item>Table Tennis</item>
        <item>Chess</item>
        <item>Hockey</item>
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>FootBall</item>
        <item>Basket Ball</item>
        <item>Table Tennis</item>
        <item>Chess</item>
        <item>Hockey</item>
    </string-array>

</resources>
