<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_item_1"
        android:icon="@drawable/ic_music_count"
        android:title="@string/title_section1" />
    <item
        android:id="@+id/navigation_item_2"
        android:icon="@drawable/ic_promo"
        android:title="@string/title_section2" />
    <item
        android:id="@+id/navigation_item_3"
        android:icon="@drawable/icon_invite_pink"
        android:title="@string/title_section3" />
    <item
        android:id="@+id/navigation_item_4"
        android:icon="@drawable/ic_history"
        android:title="@string/title_section4" />
    <item
        android:id="@+id/navigation_item_6"
        android:icon="@drawable/ic_live_help"
        android:title="@string/title_section6" />
</menu>